--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Realtime Clock</title>
+
+  <!-- link -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <main>
-
+    <div class="container">
+      
+    </div>
   </main>
   <footer>
 
