--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
   <main>
     <div class="container">
-      
+      <div class="wrapper">
+        <div class="message">
+          <h1>Good Morning</h1>
+        </div>
+      </div>
     </div>
   </main>
   <footer>
