--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
   <main>
     <div class="container">
       <div class="wrapper">
+
         <div class="message">
-          <h1>Good Morning</h1>
+          <h1 class="main-message">Good Morning</h1>
+        </div>
+
+        <div class="clock">
+          <h1>20:00:00 AM</h1>
         </div>
       </div>
     </div>
   </main>
+
+
   <footer>
 
   </footer>
