--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     </div>
   </main>
 
-
   <footer>
-
+    <span>
+      <p>Build with love by <b><a href="https://instagram.com/adamadtm13_">Adam Febrian</a></b></p>
+      <p>Wanna Improve it? <b><a href="https://github.com/feebrian/simple-js-clock">fork</a></b> this.</p>
+    </span>
   </footer>
 </body>
 
