--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <h1 class="main-message">Good Morning</h1>
         </div>
 
-        <div class="clock">
-          <h1>20:00:00 AM</h1>
+        <div class="clock-wrapper">
+          <h1 id="main-clock" onload="currentTime()"></h1>
         </div>
       </div>
     </div>
@@ -33,6 +33,8 @@
       <p>Wanna Improve it? <b><a href="https://github.com/feebrian/simple-js-clock">fork</a></b> this.</p>
     </span>
   </footer>
+
+  <script src="main.js"></script>
 </body>
 
 </html>
