--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="wrapper">
 
         <div class="message">
-          <h1 class="main-message">Good Morning</h1>
+          <h1 id="main-message" onload="message()"></h1>
         </div>
 
         <div class="clock-wrapper">
